Name:                   serial-test-generators
Version:                0.1.0
Author:                 Scott <scottmurphy09@gmail.com>
Maintainer:             Scott <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Test.Serial
  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , binary
                      , cereal
                      , bytestring >= 0.9.0
                        

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , aeson
                      , binary
                      , cereal
                      , bytestring


Source-Repository head
  Type:                 git
--  Location:             
